add browser_specific_settings to manifest.json

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,12 @@
   "name": "nah",
   "description": "Makes the youtube video not interested button easier to click.",
   "version": "1.0",
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "me@liamozog.com",
+      "strict_min_version": "42.0"
+    }
+  },
   "content_scripts" : [
     {
       "matches": ["https://*.youtube.com/*"],
