--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "nah",
+  "name": "Nah - Youtube Not Interested Button",
   "description": "Makes the youtube video not interested button easier to click.",
   "version": "1.1.1",
   "browser_specific_settings": {
