--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,22 @@
 {
-  "manifest_version": 3,
-  "name": "Nah - Youtube Not Interested Button",
-  "description": "Makes the youtube video not interested button easier to click.",
-  "version": "1.1.2",
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "me@liamozog.com",
-      "strict_min_version": "58.0"
-    }
-  },
-  "content_scripts" : [
-    {
-      "matches": ["https://*.youtube.com/*"],
-      "js": ["nah.js"]
-    }
-  ]
+    "manifest_version": 3,
+    "name": "Nah - Youtube Not Interested Button",
+    "description": "Makes the youtube video not interested button easier to click.",
+    "version": "1.1.2",
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "me@liamozog.com",
+            "strict_min_version": "58.0"
+        }
+    },
+    "content_scripts": [
+        {
+            "matches": ["https://*.youtube.com/*"],
+            "js": ["nah.js"]
+        }
+    ],
+    "options_ui": {
+        "page": "options.html"
+    },
+    "permissions": ["storage"]
 }
