--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,18 +1,12 @@
 {
     "manifest_version": 3,
-    "name": "Nah - Youtube Not Interested Button",
-    "description": "Makes the youtube video not interested button easier to click.",
-    "version": "1.3",
-    "browser_specific_settings": {
-        "gecko": {
-            "id": "me@liamozog.com",
-            "strict_min_version": "58.0"
-        }
-    },
+    "name": "Watched! - Youtube Remove from 'Watch Later' Button",
+    "description": "Makes the 'Delete from Watch Later' button easier to click.",
+    "version": "1.0",
     "content_scripts": [
         {
             "matches": ["https://*.youtube.com/*"],
-            "js": ["nah.js"]
+            "js": ["watch_later.js"]
         }
     ],
     "options_ui": {
