Refactor injected.js and update watch_later.js to load injected script as a module; adjust manifest.json to include injected.js in web_accessible_resources

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,7 @@
     "permissions": ["storage"],
     "web_accessible_resources": [
         {
-            "resources": ["storage_utilities.js", "watch_later.js"],
+            "resources": ["storage_utilities.js", "injected.js"],
             "matches": ["https://*.youtube.com/*"]
         }
     ]
